--- a/app/welcome.ejs
+++ b/app/welcome.ejs
@@ -5,13 +5,13 @@
     </div>-->
     <div id="welcomeContent">
         <img id="welcomeImageSeal" src="assets/images/SealCircle.png"/>
-        <span id="welcomeHeader"><%- lang('welcome.welcomeHeader') %></span>
-        <span id="welcomeDescription"><%- lang('welcome.welcomeDescription') %></span>
+        <span id="welcomeHeader">Bienvenue sur le launcher FC Croyant</span>
+        <span id="welcomeDescription">Nous vous souhaitons de passer un bon moment sur le serveur</span>
         <br>
-        <span id="welcomeDescCTA"><%- lang('welcome.welcomeDescCTA') %></span>
+        <span id="welcomeDescCTA">Soyez prêt(e) à vivre une aventure inoubliable.</span>
         <button id="welcomeButton">
             <div id="welcomeButtonContent">
-                <%- lang('welcome.continueButton') %>
+                CONTINUER
                 <svg id="welcomeSVG" viewBox="0 0 24.87 13.97">
                     <defs>
                         <style>.arrowLine{fill:none;stroke:#FFF;stroke-width:2px;transition: 0.25s ease;}</style>
